--- a/thesis.bib
+++ b/thesis.bib
@@ -5,26 +5,24 @@
 	publisher = {Prentice Hall}
 }
 
-@unpublished{mirmotahari2018individualized,
-    title     = {Individualized Assessment and Automated Feedback in Undergraduate Computer Science Education},
-    author    = {Mirmotahari, O. and Damsa, C.},
-    note      = {Unpublished manuscript},
-    year      = {2018}
+@article{le2009, 
+    title={Building Model of Learner Profile in Adaptive On-line Training}, 
+    volume={4}, 
+    number={1}, 
+    journal={Journal of Technical Education Science}, 
+    author={Le, Duc Long and Vo, Thanh C and Nguyen, An Te and Tran, Van Hao}, 
+    year={2009}, 
+    pages={30--41} 
 }
 
-@inproceedings{le2009,
-    title     = {Building Learner Profile in Adaptive e-Learning Systems},
-    author    = {Le, D.-L. and Nguyen, A.-T. and Nguyen, D.-T. and Hunger, A.},
-    booktitle = {Proceedings of the Adaptive e-Learning Systems Workshop},
-    pages     = {15--17},
-    year      = {2009}
-}
 
-@phdthesis{ballantyne2022,
-    title     = {Creating Robust Educational Experiences Online},
-    author    = {Ballantyne, E.},
-    school    = {Mount Saint Vincent University},
-    year      = {2022}
+@book{ballantyne2022,
+  author    = {Emily Ballantyne},
+  editor    = {Erin Chapman and Ujjwal Sethi},
+  title     = {Online Course Development: Creating Robust Educational Experiences Online},
+  year      = {2022},
+  publisher = {Mount Saint Vincent University},
+  keywords  = {Curriculum planning and development, Higher education, Tertiary education}
 }
 
 @article{hattie2007,
@@ -34,9 +32,11 @@
     volume    = {77},
     number    = {1},
     pages     = {81--112},
-    year      = {2007},
-    doi       = {10.3102/003465430298487}
+    year      = {2007}
 }
+
+//doi       = {10.3102/003465430298487}
+
 
 @article{shute2008,
     title     = {Focus on Formative Feedback},
@@ -45,18 +45,17 @@
     volume    = {78},
     number    = {1},
     pages     = {153--189},
-    year      = {2008},
-    doi       = {10.3102/0034654307313795}
+    year      = {2008}
 }
+//doi       = {10.3102/0034654307313795}
 
 @article{hatziapostolou2010,
-    title     = {Enhancing the Impact of Formative Feedback on Student Learning through an Online Feedback System},
-    author    = {Hatziapostolou, T. and Paraskakis, I.},
-    journal   = {Electronic Journal of E-Learning},
-    volume    = {8},
-    pages     = {111--122},
-    year      = {2010},
-    url       = {https://api.semanticscholar.org/CorpusID:14519912}
+    author = {Hatziapostolou, Thanos and Paraskakis, Iraklis},
+    year = {2010},
+    pages = {111--122},
+    title = {Enhancing the Impact of Formative Feedback on Student Learning through an Online Feedback System},
+    volume = {8},
+    journal = {Electronic Journal of e-Learning}
 }
 
 @article{ozdamli2016,
@@ -67,8 +66,8 @@
     number    = {2},
     pages     = {98--105},
     year      = {2016},
-    doi       = {10.18844/wjet.v8i2.640}
 }
+//doi       = {10.18844/wjet.v8i2.640}
 
 @article{turnbull2021,
     title     = {Learning Management Systems: A Review of the Research Methodology Literature in Australia and China},
@@ -78,16 +77,16 @@
     number    = {2},
     pages     = {164--178},
     year      = {2021},
-    doi       = {10.1080/1743727X.2020.1737002}
 }
+//doi       = {10.1080/1743727X.2020.1737002}
 
 @article{krusche2022,
     author = {Krusche, Stephan},
     year = {2022},
     month = {January},
     title = {Semi-Automatic Assessment of Modeling Exercises using Supervised Machine Learning},
-    doi = {10.24251/HICSS.2022.108}
 }
+//doi = {10.24251/HICSS.2022.108}
 
 @article{krusche2018,
     author    = {Krusche, Stephan and Seitz, Andreas},
@@ -96,14 +95,15 @@
     isbn      = {9781450351034},
     publisher = {Association for Computing Machinery},
     address   = {New York, NY, USA},
-    url       = {https://doi.org/10.1145/3159450.3159602},
-    doi       = {10.1145/3159450.3159602},
+    
     booktitle = {Proceedings of the 49th ACM Technical Symposium on Computer Science Education},
     pages     = {284-289},
     numpages  = {6},
     location  = {Baltimore, Maryland, USA},
     series    = {SIGCSE '18}
 }
+// url       = {https://doi.org/10.1145/3159450.3159602},
+// doi       = {10.1145/3159450.3159602},
 
 @article{schwind2023,
 	title     = {Generalizing Machine-Learning Based Assessments},
@@ -140,12 +140,11 @@
     number    = {2},
     pages     = {42-46},
     year      = {2007},
-    month     = {April},
     issn      = {1947-380X},
-    doi       = {10.4085/1947-380X-2.2.42},
-    url       = {https://doi.org/10.4085/1947-380X-2.2.42},
-    eprint    = {https://meridian.allenpress.com/atej/article-pdf/2/2/42/1450746/1947-380x-2\_2\_42.pdf},
 }
+// doi       = {10.4085/1947-380X-2.2.42},
+//    url       = {https://doi.org/10.4085/1947-380X-2.2.42},
+//    eprint    = {https://meridian.allenpress.com/atej/article-pdf/2/2/42/1450746/1947-380x-2\_2\_42.pdf},
 
 @article{liu2020,
     author      = {Haochen Liu and Zitao Liu and Zhongqin Wu and Jiliang Tang},
@@ -162,24 +161,24 @@
 }
  @article{bulut2020, 
     title        = {Guidelines for Generating Effective Feedback from E-Assessments}, 
-    journal      = {Hacettepe Üniversitesi Eğitim Fakültesi Dergisi}, 
+    journal      = {Hacettepe University Journal of Education}, 
     volume       = {35}, 
     pages        = {60-72}, 
     year         = {2020}, 
     author       = {Bulut, Okan and Cutumisu, Maria and Singh, Deepak and Aquilina, Alexandra M.}, 
     keywords     = {E-assessment, feedback, score reporting, test development, computerized assessment}, 
     number       = {Special Issue}, 
-    publisher    = {Hacettepe University},
-    doi          = {10.16986/HUJE.2020063705}
+    publisher    = {Hacettepe University}
 }
+//doi       = {10.16986/HUJE.2020063705}
 
 @article{mirmotahari2018,
-    author    = {Mirmotahari, Omid and Damsa, Crina},
-    title     = {Individualized assessment and automated feedback in undergraduate computer science education},
+    author    = {Mirmotahari, Omid and Damsa, Crina and Berg, Yngvar},
+    title     = {Individualized Assessment and Automated Feedback in Undergraduate Computer Science Education},
     year      = {2018},
-    month     = {January},
-    doi       = {10.16986/HUJE.2020063705}
+    publisher    = {Hacettepe University}
 }
+
 @article{maier2022,
     title = {Personalized feedback in digital learning environments: Classification framework and literature review},
     journal = {Computers and Education: Artificial Intelligence},
@@ -187,10 +186,9 @@
     pages = {100080},
     year = {2022},
     issn = {2666-920X},
-    doi = {https://doi.org/10.1016/j.caeai.2022.100080},
-    url = {https://www.sciencedirect.com/science/article/pii/S2666920X22000352},
-    author = {Uwe Maier and Christian Klotz}
+    author = {Maier, Uwe and Klotz, Christian}
 }
+//doi = {https://doi.org/10.1016/j.caeai.2022.100080},
 
 @article{bousalem2022,
     author={Bousalem, Samia and Benchikha, Fouzia and Chelghoum, Massinissa},
@@ -240,7 +238,8 @@
   number={},
   pages={1445-1459},
   keywords={Education;Mathematics;Mathematical models;Task analysis;Technological innovation;Standards;Knowledge based systems;Automated teaching plan generation;instructional design capabilities;large language models (LLMs);mathematical problem chains;pedagogical content knowledge (PCK)},
-  doi={10.1109/TLT.2024.3384765}}
+  doi={10.1109/TLT.2024.3384765}
+  }
 
 @article{bernius2019,
     author    = {Bernius, Jan Philip and Bruegge, Bernd},
@@ -267,18 +266,15 @@
     month     = {January}
 }
 
-@article{cohn2024,
+@inproceedings{cohn2024,
    title={A Chain-of-Thought Prompting Approach with LLMs for Evaluating Students' Formative Assessment Responses in Science},
    volume={38},
    ISSN={2159-5399},
-   url={http://dx.doi.org/10.1609/aaai.v38i21.30364},
-   DOI={10.1609/aaai.v38i21.30364},
    number={21},
-   journal={Proceedings of the AAAI Conference on Artificial Intelligence},
+   booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
    publisher={Association for the Advancement of Artificial Intelligence (AAAI)},
    author={Cohn, Clayton and Hutchins, Nicole and Le, Tuan and Biswas, Gautam},
    year={2024},
-   month={March},
    pages={23182-23190}
 }
 
@@ -290,19 +286,19 @@
     volume={62},
     number={1},
     year={2024},
-    month={November},
     pages={1-18},
-    doi={10.1080/14703297.2024.2422337}
 }
 
 @article{lohr2024,
-    title={You're (Not) My Type—Can LLMs Generate Feedback of Specific Types for Introductory Programming Tasks?},
-    author={Lohr, D. and Keuning, H. and Kiesler, N.},
-    journal={arXiv preprint arXiv:2412.03516},
-    year={2024},
-    month={December},
-    doi={10.48550/arXiv.2412.03516}
+author = {Lohr, Dominic and Keuning, Hieke and Kiesler, Natalie},
+title = {You're (Not) My Type-Can LLMs Generate Feedback of Specific Types for Introductory Programming Tasks?},
+journal = {Journal of Computer Assisted Learning},
+volume = {41},
+number = {1},
+pages = {e13107},
+year = {2025}
 }
+
 
 @article{naz2024,
     title={Exploring the Feasibility and Efficacy of ChatGPT3 for Personalized Feedback in Teaching},
@@ -315,18 +311,15 @@
     doi={10.34190/ejel.22.2.3345}
 }
 
-@article{dai2023,
-    author={Dai, Wei and Lin, Jionghao and Jin, Hua and Li, Tongguang and Tsai, Yi-Shan and Gašević, Dragan and Chen, Guanliang},
-    booktitle={2023 IEEE International Conference on Advanced Learning Technologies (ICALT)}, 
-    title={Can Large Language Models Provide Feedback to Students? A Case Study on ChatGPT}, 
-    year={2023},
-    volume={},
-    number={},
-    pages={323-325},
-    keywords={Chatbots;Task analysis;Feedback Generation;Automated Feedback;Large Language Model;Feedback Effectiveness},
-    doi={10.1109/ICALT58122.2023.00100}
-}
-
+@inproceedings{dai2023,
+  author={Dai, Wei and Lin, Jionghao and Jin, Hua and Li, Tongguang and Tsai, Yi-Shan and Gašević, Dragan and Chen, Guanliang},
+  booktitle={2023 IEEE International Conference on Advanced Learning Technologies (ICALT)}, 
+  title={Can Large Language Models Provide Feedback to Students? A Case Study on ChatGPT}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={323-325},
+  }
 
 @article{morales2024,
     AUTHOR = {Morales-Chan, Miguel and Amado-Salvatierra, Hector R. and Medina, José Amelio and Barchino, Roberto and Hernández-Rizzardini, Rocael and Teixeira, António Moreira},
@@ -336,22 +329,21 @@
     YEAR = {2024},
     NUMBER = {10},
     ARTICLE-NUMBER = {1960},
-    URL = {https://www.mdpi.com/2079-9292/13/10/1960},
-    ISSN = {2079-9292},
-    DOI = {10.3390/electronics13101960}
+    ISSN = {2079-9292}
 }
 
-
-
-
-@article{pathak2025,
-    title={Rubric Is All You Need: Enhancing LLM-based Code Evaluation With Question-Specific Rubrics},
-    author={Pathak, A. and Gandhi, R. and Uttam, V. and Devansh, Nakka, Y. and Jindal, A. R. and Ghosh, P. and Ramamoorthy, A. and Verma, S. and Mittal, A. and Ased, A. and Khatri, C. and Challa, J. S. and Kumar, D.},
-    journal={arXiv preprint arXiv:2503.23989},
-    year={2025},
-    month={March},
-    doi={10.48550/arXiv.2503.23989}
+@inproceedings{pathak2025,
+    author = {Pathak, Aditya and Gandhi, Rachit and Uttam, Vaibhav and Ramamoorthy, Arnav and Ghosh, Pratyush and Jindal, Aaryan Raj and Verma, Shreyash and Mittal, Aditya and Ased, Aashna and Khatri, Chirag and Nakka, Yashwanth and Devansh and Challa, Jagat Sesh and Kumar, Dhruv},
+    title = {Rubric Is All You Need: Improving LLM-Based Code Evaluation With Question-Specific Rubrics},
+    year = {2025},
+    isbn = {9798400713408},
+    publisher = {Association for Computing Machinery},
+    booktitle = {Proceedings of the 2025 ACM Conference on International Computing Education Research V.1},
+    pages = {181--195},
+    numpages = {15},
+    keywords = {Large Language Models, Code Assessment and Grading}
 }
+
 
 @article{qiu2025,
     title={SteLLA: A Structured Grading System Using LLMs with RAG},
@@ -362,14 +354,18 @@
     doi={10.48550/arXiv.2501.09092}
 }
 
-@article{ria2025,
-    title={LLM-Driven Feedback for Enhancing Conceptual Design Learning in Database Systems Courses},
-    author={Riazi, S. and Rooshenas, P.},
-    journal={Proceedings of the 56th ACM Technical Symposium on Computer Science Education V},
-    year={2025},
-    month={January},
-    doi={10.1145/3641554.3701940}
+@inproceedings{ria2025,
+author = {Riazi, Sara and Rooshenas, Pedram},
+title = {LLM-Driven Feedback for Enhancing Conceptual Design Learning in Database Systems Courses},
+year = {2025},
+isbn = {9798400705311},
+publisher = {Association for Computing Machinery},
+booktitle = {Proceedings of the 56th ACM Technical Symposium on Computer Science Education V. 1},
+pages = {1001–-1007},
+numpages = {7},
+series = {SIGCSETS 2025}
 }
+
 
 @article{stahl2024,
     title={Exploring LLM Prompting Strategies for Joint Essay Scoring and Feedback Generation},
@@ -380,14 +376,17 @@
     doi={10.48550/arXiv.2404.15845}
 }
 
-@article{stamper2024,
+@inproceedings{stamper2024,
+    author={Stamper, John and Xiao, Ruiwei and Hou, Xinying},
     title={Enhancing LLM-Based Feedback: Insights from Intelligent Tutoring Systems and the Learning Sciences},
-    author={Stamper, J. and Xiao, R. and Hou, X.},
-    journal={arXiv preprint arXiv:2405.04645},
+    booktitle={Artificial Intelligence in Education. Posters and Late Breaking Results, Workshops and Tutorials, Industry and Innovation Tracks, Practitioners, Doctoral Consortium and Blue Sky},
     year={2024},
-    month={May},
-    doi={10.48550/arXiv.2405.04645}
+    publisher="Springer Nature Switzerland",
+    address="Cham",
+    pages={32--43},
+    isbn={978-3-031-64315-6}
 }
+
 
 @article{lin2023,
     title={Using Large Language Models to Provide Explanatory Feedback to Human Tutors},
@@ -398,25 +397,28 @@
     doi={10.48550/arXiv.2306.15498}
 }
 
-@article{tang2024,
-    title={SPHERE: Scaling Personalized Feedback in Programming Classrooms with Structured Review of LLM Outputs},
-    author={Tang, X. and Wong, S. and Huynh, M. and He, Z. and Yang, Y. and Chen, Y.},
-    journal={arXiv preprint arXiv:2410.16513},
-    year={2024},
-    month={October},
-    doi={10.48550/arXiv.2410.16513}
+@inproceedings{tang2024,
+author = {Tang, Xiaohang and Wong, Sam and Huynh, Marcus and He, Zicheng and Yang, Yalong and Chen, Yan},
+title = {SPHERE: Supporting Personalized Feedback at Scale in Programming Classrooms with Structured Review of Generative AI Outputs},
+year = {2025},
+isbn = {9798400713958},
+publisher = {Association for Computing Machinery},
+booktitle = {Proceedings of the Extended Abstracts of the CHI Conference on Human Factors in Computing Systems},
+articleno = {467},
+numpages = {17},
+series = {CHI EA '25}
 }
 
-@article{chun2025,
-      title={PlanGlow: Personalized Study Planning with an Explainable and Controllable LLM-Driven System}, 
-      author={Jiwon Chun and Yankun Zhao and Hanlin Chen and Meng Xia},
-      year={2025},
-      eprint={2504.12452},
-      archivePrefix={arXiv},
-      primaryClass={cs.HC},
-      url={https://arxiv.org/abs/2504.12452}, 
+@inproceedings{chun2025,
+    author = {Chun, Jiwon and Zhao, Yankun and Chen, Hanlin and Xia, Meng},
+    title = {PlanGlow: Personalized Study Planning with an Explainable and Controllable LLM-Driven System},
+    isbn = {9798400712913},
+    publisher = {Association for Computing Machinery},
+    booktitle = {Proceedings of the Twelfth ACM Conference on Learning @ Scale},
+    pages = {116--127},
+    numpages = {12},
+    year = {2025},
 }
-
 
 @article{cuellar2025,
     author = {Cuéllar, Óscar and Contero, Manuel and Hincapié, Mauricio},
@@ -426,21 +428,18 @@
     year = {2025},
     number = {5},
     article-number = {45},
-    url = {https://www.mdpi.com/2414-4088/9/5/45},
     issn = {2414-4088},
-    abstract = {This study investigates an Adaptive Feedback System (AFS) that integrates deep learning (a recurrent neural network trained with historical student data) and GPT-4 to provide personalized feedback in a Digital Art course. In a quasi-experimental design, the intervention group (n = 42) received weekly feedback generated from model predictions, while the control group (n = 39) followed the same program without this intervention across four learning blocks or levels. The results revealed (1) a cumulative effect with a significant performance difference in the fourth learning block (+12.63 percentage points); (2) a reduction in performance disparities between students with varying levels of prior knowledge in the experimental group (−56.5%) versus an increase in the control group (+103.3%); (3) an “overcoming effect” where up to 42.9% of students surpassed negative performance predictions; and (4) a positive impact on active participation, especially in live class attendance (+30.21 points) and forum activity (+9.79 points). These findings demonstrate that integrating deep learning with LLMs can significantly improve learning outcomes in online educational environments, particularly for students with limited prior knowledge.},
-    doi = {10.3390/mti9050045}
 }
 
 @article{kochmar2020,
-    author = {Kochmar, E. and Vu, D. D. and Belfer, R. and Gupta, V. and Serban, I. V. and Pineau, J.},
-    title = {Automated Personalized Feedback Improves Learning Gains in An Intelligent Tutoring System},
-    journal = {Artificial Intelligence in Education},
-    volume = {12164},
-    pages = {140-16},
-    year = {2020},
-    doi = {10.1007/978-3-030-52240-7_26},
-    pmcid = {PMC7334734}
+  author    = {Kochmar, Ekaterina and Vu, Dung Do and Belfer, Robert and Gupta, Varun and Serban, Iulian Vlad and Pineau, Joelle},
+  title     = {Automated Data-Driven Generation of Personalized Pedagogical Interventions in Intelligent Tutoring Systems},
+  journal   = {International Journal of Artificial Intelligence in Education},
+  year      = {2022},
+  volume    = {32},
+  number    = {2},
+  pages     = {323--349},
+  issn      = {1560-4306},
 }
 
 @article{lo2023,
@@ -489,13 +488,10 @@
 @book{biggs1982,
   author    = {Biggs, John B. and Collis, Kevin F.},
   title     = {Evaluating the Quality of Learning: The SOLO Taxonomy (Structure of the Observed Learning Outcome)},
-  year      = {1982},
-  series    = {Educational Psychology Series},
   publisher = {Academic Press},
-  address   = {New York},
+  year      = {1982},
+  address   = {New York},     
   isbn      = {978-0-12-097552-5},
-  url       = {https://www.sciencedirect.com/book/9780120975525/evaluating-the-quality-of-learning},
-  urldate   = {2025-08-20}
 }
 
 @book{bloom1956,
@@ -503,7 +499,5 @@
   title     = {Taxonomy of Educational Objectives: The Classification of Educational Goals; Handbook I: Cognitive Domain},
   year      = {1956},
   publisher = {David McKay Company, Inc.},
-  address   = {New York},
-  url       = {https://scholar.google.com/citations?view_op=view_citation&hl=en&user=XIwE3gsAAAAJ&citation_for_view=XIwE3gsAAAAJ:4fKUyHm3Qg0C},
-  urldate   = {2025-08-20}
+  address   = {New York}
 }
